[tool.poetry]
name = "dctwin"
version = "0.4.0"
description = "Building Co-Simulation Digital Twin for Data Centers."
authors = ["Neng <xiad0001@ntu.edu.sg>", "Zhiwei Cao <zhiwei003@ntu.edu.sg>", "Ruihang Wang <ruihang001@ntu.edu.sg>"]
packages = [
    {include = "dctwin"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pydantic = "1.10.2"
jinja2 = "3.1.2"
docker = "6.0.0"
markupsafe = "2.0.1"
setuptools = "59.8.0"
gym = "^0.26.2"
cvxpy = "^1.2.1"
opyplus = "^1.4.2"
fluidfoam = "^0.2.3"
loguru = "^0.6.0"
torch = "1.12.0"
gpytorch = "^1.9.0"
tqdm = "^4.64.1"
protobuf = "3.19.0"
cvxpylayers = "^0.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.10.1"
pylava = "^0.3.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
