[tool.poetry]
name = "dctwin"
version = "0.8.1"
description = "Building Co-Simulation Digital Twin for Data Centers."
authors = ["Ruihang Wang <ruihang001@ntu.edu.sg>", "Ryan Wong <ryan.wong@ntu.edu.sg>", "Zhiwei Cao <zhiwei003@ntu.edu.sg>", "Neng <xiad0001@ntu.edu.sg>"]
packages = [
    {include = "dctwin"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "1.10.2"
jinja2 = "3.1.2"
markupsafe = "2.0.1"
setuptools = "59.8.0"
gym = "^0.26.2"
cvxpy = "^1.2.1"
opyplus = "^1.4.2"
fluidfoam = "^0.2.3"
loguru = "^0.6.0"
torch = "1.11.0"
gpytorch = "^1.9.0"
tqdm = "^4.64.1"
protobuf = "3.19.0"
cvxpylayers = "^0.1.5"
sympy = "1.11.1"
docker = "^6.1.2"
scipy = "1.10.1"
kubernetes = "^27.2.0"
sh = "^2.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.10.1"
pylava = "^0.3.0"
black = "^22.10.0"
mkdocs = "^1.4.2"
mkdocstrings = "^0.19.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-material = "^8.5.10"
mkdocs-material-extensions = "^1.1"
mkdocs-section-index = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
