[tool.poetry]
name = "dctwin"
version = "2.1.4"
description = "Building Multiphysics Digital Twin for Data Centers."
authors = ["Ruihang Wang <ruihang001@ntu.edu.sg>", "Ryan Wong <ryan.wong@ntu.edu.sg>", "Zhiwei Cao <zhiwei003@ntu.edu.sg>", "Neng <xiad0001@ntu.edu.sg>"]
packages = [
    {include = "dctwin"},
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jinja2 = "3.1.2"
markupsafe = "2.0.1"
setuptools = "59.8.0"
cython = ">=3.0.10"  # for successful installation of cchardet
gym = "^0.26.2"
cvxpy = "^1.2.1"
opyplus = "^1.4.2"
fluidfoam = "^0.2.3"
torch = ">=2.2.0"
gpytorch = "^1.9.0"
tqdm = "^4.64.1"
protobuf = "3.19.0"
cvxpylayers = "^0.1.5"
sympy = "1.11.1"
numpy = "<2.0.0"
docker = "^7.1.0"
scipy = "^1.10.1"
kubernetes = "^27.2.0"
eppy = "^0.5.63"
dclib = {git = "https://github.com/cap-dcwiz/dclib.git", tag="v2.1.1"}
sh = "^2.0.6"
coolprop = "^6.6.0"
torchdiffeq = "^0.2.3"
psutil = "5.9.8"
vtk = "9.3.0"
requests = ">2.32"
configobj = "^5.0.8" # DO NOT DELETE: apptools which is a dependency of mayavi removed configobj as a required dependency so we need to manually install configobj https://github.com/enthought/apptools/pull/351
reportlab = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.10.1"
pylava = "^0.3.0"
black = "^24.3.0"
mkdocs = "^1.4.2"
mkdocstrings = "^0.19.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-material = "^9.5.5"
mkdocs-material-extensions = "^1.1"
mkdocs-section-index = "^0.3.4"
mayavi = "^4.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
